Fixed issues
1. Redundant empty tooltip when used buckets/ resources is 0
2. Drop-down scrollbar weird design in cloud type filte
3. Cannot create pool with only 1 host that has 3 or more storage drives

--- a/frontend/src/app/components/shared/dropdown/dropdown.less
+++ b/frontend/src/app/components/shared/dropdown/dropdown.less
@@ -4,10 +4,6 @@ dropdown {
     display: inline-block;
     width: 274px;
 
-    ::-webkit-scrollbar-thumb  {
-        border-color: @color6;
-    }
-
     hr {
         border-top: 1px solid @color7;
         margin: 2px auto;
@@ -69,6 +65,10 @@ dropdown {
         min-height: 24px;
         max-height: 170px;
         overflow-y: auto;
+
+        &::-webkit-scrollbar-thumb  {
+            border-color: @color6;
+        }
     }
 
     .dd-actions {
